force-app/main/default/objects/Exchange_Rate__c/fields/Final_Rate__c.field-meta.xml
<CustomField>
    <fullName>Final_Rate__c</fullName>
    <formula>Exchange_Rate__c +  Offset_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>