force-app/main/default/objects/Exchange_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Currency_Code__c</columns>
    <columns>Exchange_Rate__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Offset_Value__c</columns>
    <columns>Final_Rate__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>